k8s/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend

spec:
  to:
    kind: Service
    name: frontend

  port:
    targetPort: 3000
